Actualmente ya funciona el relleno de datos usando la API de marvel. Tiene limitaciones. Funcional y nueva version de programa